--- a/style.css
+++ b/style.css
@@ -1,77 +1,118 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin:0;
+    padding:0;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-
-body{
-    background-image: linear-gradient(120deg, #f6d365, #fda085);
-    color: white;
-    font-family: "Poppins", sans-serif ;
+.container{
+    width: 100%;
     min-height: 100vh;
+    background: linear-gradient(132deg, #fd3213, #32a0f4);
+    padding:10px;
 }
-
-header{
-    font-size: 1.5rem;
+.todo-app{
+    width: 100%;
+    max-width: 540px;
+    background: #fff;
+    margin: 100px auto 20px;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
 }
-
-header,
-form{
-    min-height: 20vh;
-    display: flex;
-    justify-content: center;
+h1{
+    color:white;
     align-items: center;
+    text-align: center;
+    padding-top: 20px;
 }
-
-form input, form button{
-    padding: 0.5rem;
-    font-size: 2rem;
-    border: none;
-    background: white;
+.todo-app h2{
+    color: #002765;
+    display:flex;
+    align-items: center;
+    margin-bottom: 20px;
 }
-
-form button{
-    color: #d88771;
-    background: white;
-    cursor: pointer;
+.todo-app h2:hover{
+    transform: scale(1.05);
+    transform-origin: left;
     transition: all 0.3s ease;
 }
-form button:hover{
-    background: #d88771;
-    color: white;
-}
-
-.todo-container{
+.todo-app h2 img{
+    width: 30px;
+    margin-left: 10px;
+}.row{
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
+    background: #edeef0;
+    border-radius: 30px;
+    padding-left: 20px;
+    margin-bottom: 25px;
 }
-.todo-list{
-    min-width: 30%;
-    list-style: none;
-}
-
-.todo{
-    margin: 0.5rem;
-    background: white;
-    color: black;
-    font-size: 1.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.todo li{
+input{
     flex: 1;
-}
-.trash-btn, .complete-btn{
-    background: #ff6f47;
-    color: white;
     border: none;
-    padding: 1rem;
-    cursor: pointer;
-    font-size: 1rem;
+    outline: none;
+    background : transparent;
+    padding: 10px;
+    font-weight: 20px;
+
 }
-.complete-btn{
-    background: rgb(73, 204, 73);
+button{
+    color: white;
+    background: #ff5945;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border: none;
+    outline: none;
+    padding: 16px 50px;
+    border-radius: 40px;
+}
+button:hover{
+    background: #edeef0;
+    color: #ff5945;
+}
+button i {
+    font-size: 24px; /* Adjust the size as needed */
+}
+ul li{
+     list-style: none;
+     font-size: 17px;
+     padding: 12px 8px 12px 50px;
+     user-select: none;
+     cursor: pointer;
+     position: relative;
+}
+ul li::before{
+    content: '';
+    position: absolute;
+    height: 28px;
+    width: 28px;
+    border-radius: 50%;
+    background-image: url(unchecked.png);
+    background-size: cover;
+    background-position: center;
+    top: 12px;
+    left: 8px;
+}
+ul li.checked{
+    color: #555;
+    text-decoration: line-through;
+    color: red;
+}
+ul li.checked::before{
+    background-image: url(checked.png);
+}
+ul li span{
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+ul li span:hover{
+    background: #edeef0;
 }
